# DataVizQA

./: .buildinfo  .env.template  .gitignore  README.md  chat.html  genindex.html  home.html  index.html  insights.html  installation.html  llm_integration.html  main.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  tests.html  usage.html  utils.html
.devcontainer/: devcontainer.json
_modules/: index.html
_modules/data_viz/: llm_integration.html  utils.html
_modules/tests/: test_clean_dataframe.html  test_display_dataframe_overview.html  test_read_uploaded_file.html
_sources/: chat.rst.txt  home.rst.txt  index.rst.txt  insights.rst.txt  tests.rst.txt
docs/source/: api.rst  conf.py  index.rst  installation.rst  llm_integration.rst  main.rst  tests.rst  usage.rst  utils.rst
src/data_viz/: chat.py  home.py  insights.py  llm_integration.py  main.py  utils.py
src/data_viz/pages/: chat.py  home.py
tests/: test_clean_dataframe.py  test_display_dataframe_overview.py  test_home.py  test_llm_integration_call_llm_for_viz.py  test_llm_integration_get_insights.py  test_read_uploaded_file.py
