[project]
name = "data-viz"
version = "0.1.0"
description = "A data visualization app for tabular datasets."
authors = [
    {name = "Mehyar Mlaweh",email = "mehyarmlaweh0@gmail.com"},
	{name = "Malek Makhlouf",email = "malekhlouf@gmail.com"}
]
license = {text = "Apache"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "streamlit (>=1.41.1,<2.0.0)",
    "pytest (>=8.3.4,<9.0.0)",
    "pytest-cov (>=6.0.0,<7.0.0)",
    "pytest-mock (>=3.14.0,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ruff = "^0.9.2"
pre-commit = "^4.1.0"
sphinx = "^8.1.3"
sphinx-rtd-theme = "^3.0.2"
